[package]
name = "plugme"
version = "0.1.0"
authors = ["Vladimir Serov <me@cab404.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buttplug = { version = "2.1.1", features = ["client"] }
futures = { version = "0.3.12", features = ["thread-pool"] }
futures-util = "0.3.12"
futures-timer = "3.0.2"